添加设备登录数量限制

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
 <form action="/userLogin" method="post">
     <input type="text" name="username"> <br>
     <input type="password" name="password"> <br>
+    <input type="text" name="deviceType"> <br>
     <input type="submit" value="提交">
 </form>
 </body>
